# osm-sqlite

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conda-environment.yaml  downloader.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/osmsqlite/: downloader.py
tests/: test_downloader.py
