[metadata]
name = osmsqlite
description = Convert OpenStreetMap OSM files to an SQLite database
author = v-hill
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    osmsqlite
install_requires =
    black>=22.3.0
    fake-useragent>=0.1.11
    numpy>=1.22.0
    pandas>=1.4.0
    pre-commit>=2.19.0
    python>=3.8.0
    requests>=2.27.0
    SQLAlchemy>=1.4.35
    tqdm>=4.63.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0
    mypy>=0.960
    pytest-cov>=3.0
    pytest>=7.0
    tox>=3.25

[options.package_data]
osmsqlite = py.typed

[flake8]
max-line-length = 79
